--- a/src/style.css
+++ b/src/style.css
@@ -4,3 +4,72 @@ html,
 body {
     font-family: 'Nunito Sans', sans-serif;
 }
+
+:root {
+    --transition-duration: .2s;
+    --transition-timing-function: linear;
+    --transition-delay: 0s;
+
+    --font-size-default: 18px;
+    --font-size-lg: 25px;
+
+    --text-color-default: #2c2c2c;
+    --text-color-light: #fff;
+
+    --bg-color-default: #fff;
+    --bg-color-dark: #2c2c2c;
+
+    --border-color-default: #2c2c2c;
+}
+
+/* DEMO STYLES: YOU DON'T NEED THEM!!! */
+
+body {
+    font-family: 'Quicksand', sans-serif;
+    font-size: var(--font-size-default);
+    color: var(--text-color-default);
+}
+
+body a {
+    color: inherit;
+    text-decoration: none;
+}
+
+.header {
+    max-width: 500px;
+    margin: 50px auto 0;
+    text-align: center;
+}
+
+.header__btns {
+    display: flex;
+    justify-content: center;
+    gap: 15px;
+    margin-top: 30px;
+}
+
+.header__btn {
+    transition:
+            all
+            var(--transition-duration)
+            var(--transition-timing-function)
+            var(--transition-delay);
+    padding: 10px 20px;
+    margin-right: 10px;
+    background-color: var(--bg-color-default);
+    border: 1px solid var(--border-color-default);
+    border-radius: 3px;
+    cursor: pointer;
+    outline: none;
+}
+
+.header__btn:hover,
+.header__btn.js-active {
+    color: var(--text-color-light);
+    background-color: var(--bg-color-dark);
+}
+
+.header__title {
+    margin-bottom: 10px;
+    font-weight: 600;
+}
