fix: add border-box for cases without normalize

--- a/src/style.css
+++ b/src/style.css
@@ -19,6 +19,10 @@
 
 /* DEMO STYLES: YOU DON'T NEED THEM!!! */
 
+* {
+    box-sizing: border-box;
+}
+
 body {
     font-family: 'Nunito Sans', sans-serif;
     font-size: var(--font-size-default);
